# 100-day-challenge

./: .gitignore  LICENSE  main.py  pyproject.toml
asset/: BitNet.md  CNN_Image_Classification.ipynb  CNN_Image_Classification.py  Crossbow_Cheatsheet.md  DeepHat_vLLM.md  ET-BERT.md  GoByte_Cheatsheet.md  HuggingFace_Cheatsheet.md  HuggingFace_Fine-tuning_SLM.ipynb  HuggingFace_Foundation-Sec-8B.py  HuggingFace_Inference_Provider.ipynb  HuggingFace_VulnLLM-R-7B.md  HuggingFace_VulnLLM-R-7B.py  LLMShark_Cheatsheet.md  LLMSter_Cheatsheet.md  LLMSter_Cursor.md  LLMSter_LMStudio.md  LLMSter_Opencode.md  NTC_Architecture.md  NTC_LiteNet.md  NTC_MH-Net.md  NTC_Trident.md  OpenCode.md  OpenCode_Cheatsheet.md  PyTorch_Multi_GPU.ipynb  PyTorch_Workflow.ipynb  Pytorch_Workflow.ipynb  TabPFN_Anomaly_Detection.ipynb  TabPFN_Anomaly_Detection.py  TabPFN_Classification.ipynb  TabPFN_Classification_Multiclass.ipynb  TabPFN_Demo_Local.ipynb  pytorch_workflow.ipynb  test01.ipynb  vLLM-SR_Cheatsheet.md  vLLM_Cheatsheet.md  vLLM_Inference.py  vLLM_JupyterAI.md  vLLM_Ollama_OpenCode_Stack.md  vLLM_TRL.md  (+1 more)
asset/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
asset/catboost_info/learn/: events.out.tfevents
asset/models/: pytorch_workflow_model_A.pth
