[project]
name = "100-day-challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "catboost>=1.2.8",
    "datasets>=4.5.0",
    "huggingface-hub>=1.3.2",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "openai>=2.15.0",
    "rich>=14.2.0",
    "tabpfn>=6.3.1",
    "tabpfn-client>=0.2.6",
    "tabpfn-extensions[all]>=0.0.4",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "xgboost>=3.1.3",
]
